--- a/LPI/contact.html
+++ b/LPI/contact.html
@@ -32,7 +32,7 @@
         <li><a href="index.html">Головна</a></li>
         <li><a href="AboutUs.html">Про нас</a></li>
         <li><a href="AboutProgram.html">Про програму</a></li>
-        <li><a href="demo.html">Demo версія</a></li>
+        <li><a href="demo.html">Пробна версія</a></li>
         <li><a href="order.html">Замовити</a></li>
         <li><a href="News.html">Новини</a></li>
         <li><a class="active" href="contact.html">Контакти</a></li>
@@ -125,7 +125,7 @@
           <li><a href="index.html">Головна</a></li>
           <li><a href="AboutUs.html">Про нас</a></li>
           <li><a href="AboutProgram.html">Про програму</a></li>
-          <li><a href="demo.html">Demo версія</a></li>
+          <li><a href="demo.html">Пробна версія</a></li>
           <li><a href="order.html">Замовити</a></li>
           <li><a href="News.html">Новини</a></li>
           <li><a href="contact.html">Контакти</a></li>
