--- a/LPI/demo.html
+++ b/LPI/demo.html
@@ -32,7 +32,7 @@
         <li><a href="index.html">Головна</a></li>
         <li><a href="AboutUs.html">Про нас</a></li>
         <li><a href="AboutProgram.html">Про програму</a></li>
-        <li><a class="active" href="demo.html">Demo версія</a></li>
+        <li><a class="active" href="demo.html">Пробна версія</a></li>
         <li><a  href="order.html">Замовити</a></li>
         <li><a href="News.html">Новини</a></li>
         <li><a href="contact.html">Контакти</a></li>
@@ -43,7 +43,7 @@
 <div class="demo">
   <div class="width1100 demoContent">
     <div>
-      <h1>DEMO ВЕРСІЯ</h1>
+      <h1>Пробна версія</h1>
       <span>ПК ЛАБОРАТОРІЯ ДЛЯ БУДІВНИЦТВА</span>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -56,7 +56,7 @@
         eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
         consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
         quaerat voluptatem.</p>
-      <a class="download">Завантажити Demo версію</a>
+      <a class="download">Завантажити Пробна версію</a>
     </div>
     <img src="img/laptop.png" alt="LPI">
   </div>
@@ -117,7 +117,7 @@
           <li><a href="index.html">Головна</a></li>
           <li><a href="AboutUs.html">Про нас</a></li>
           <li><a href="AboutProgram.html">Про програму</a></li>
-          <li><a href="demo.html">Demo версія</a></li>
+          <li><a href="demo.html">Пробна версія</a></li>
           <li><a href="order.html">Замовити</a></li>
           <li><a href="News.html">Новини</a></li>
           <li><a href="contact.html">Контакти</a></li>
