--- a/LPI/index.html
+++ b/LPI/index.html
@@ -35,7 +35,7 @@
         <li><a class="active" href="index.html">Головна</a></li>
         <li><a href="AboutUs.html">Про нас</a></li>
         <li><a href="AboutProgram.html">Про програму</a></li>
-        <li><a href="demo.html">Demo версія</a></li>
+        <li><a href="demo.html">Пробна версія</a></li>
         <li><a href="order.html">Замовити</a></li>
         <li><a href="News.html">Новини</a></li>
         <li><a href="contact.html">Контакти</a></li>
@@ -52,7 +52,7 @@
       <span>Програмне Забезпечення</span>
 
       <p>Лабораторія Промислової Інформатики</p>
-      <a class="btns2" href="demo.html">СПРОБУВАТИ ДЕМО ВЕРСІЮ</a>
+      <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
     </div>
   </div>
   <div class="slide active-slide">
@@ -62,12 +62,12 @@
       <span>Програмне Забезпечення</span>
 
       <p>Лабораторія Промислової Інформатики</p>
-      <a class="btns2" href="demo.html">СПРОБУВАТИ ДЕМО ВЕРСІЮ</a>
+      <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
     </div>
   </div>
 </div>
 <div class="width1100">
-  <a class="btns">ПРО НАС</a>
+  <a class="btns" id="arrow1">ПРО НАС</a>
 
   <div class="maitTextContent">
     <p>ТОВ «Лабораторія промислової інформатики» надає послуги з розробки спеціалізованого програмного забезпечення
@@ -84,8 +84,7 @@
 <div class="lapTop">
   <div class="width1100">
     <div class="curWidth">
-      <a class="btns1">ПРО ПРОГРАМУ</a>
-
+      <a class="btns1" id="arrow2">ПК "Лабораторія для будівництва"</a>
       <p>
         ТОВ «Лабораторія промислової інформатики» провела дослідження ведення лабораторних журналів
         на підприємствах будіндустрії.
@@ -204,7 +203,7 @@
           <li><a href="index.html">Головна</a></li>
           <li><a href="AboutUs.html">Про нас</a></li>
           <li><a href="AboutProgram.html">Про програму</a></li>
-          <li><a href="demo.html">Demo версія</a></li>
+          <li><a href="demo.html">Пробна версія</a></li>
           <li><a href="order.html">Замовити</a></li>
           <li><a href="News.html">Новини</a></li>
           <li><a href="contact.html">Контакти</a></li>
