--- a/LPI/AboutProgram.html
+++ b/LPI/AboutProgram.html
@@ -262,7 +262,7 @@
   <form method="post">
     <input id="name" type="text" placeholder="Введіть Ваше ім'я*"/>
     <input id="phone" type="text" placeholder="Введіть Ваш Телефон*"/>
-    <input type="submit" value="ВІДПРАВИТИ" class="btns3"/>
+    <input type="submit" value="ПЕРЕДЗВОНИТА" class="btns3"/>
   </form>
 </div>
 <div id="overflow"></div>
@@ -286,7 +286,7 @@
         <div>
           <i class="fa fa-phone-square" aria-hidden="true"></i>
           (044) 440-0-44
-          <a class="call">Заказать звонок </a>
+          <!--<a class="call">Заказать звонок </a>-->
 
           <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
         </div>
