--- a/LPI/index.html
+++ b/LPI/index.html
@@ -1,224 +1,232 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>LPI</title>
-  <link type="text/css" rel="stylesheet" href="css/style.css"/>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900i" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <title>LPI</title>
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
+          integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900i" rel="stylesheet">
+    <!--[if IE 8]>
+    <style type="text/css">
+        .sliderText a:hover {
+            background: #0066cc !important;
+            color: white !important;
+        }
+    </style>
+    <![endif]-->
 </head>
 <body>
 
 <div class="header">
-  <div class="topP">
-    <div class="width1100 ">
-      <i class="fa fa-phone-square" aria-hidden="true"></i>
-      (044) 440-0-44
-      <a class="call">Заказать звонок </a>
-      <i class="fa fa-home" aria-hidden="true"></i>
-      Киев, ул. Название Улици, №25 офис 3
+    <div class="topP">
+        <div class="width1100 ">
+            <i class="fa fa-phone-square" aria-hidden="true"></i>
+            (044) 440-0-44
+            <a class="call">Заказать звонок </a>
+            <i class="fa fa-home" aria-hidden="true"></i>
+            Киев, ул. Название Улици, №25 офис 3
+        </div>
     </div>
-  </div>
-  <div class="menuTopFixed">
-    <div class="width1100 menuTop">
-      <a href="index.html"><img src="img/logo.png" alt=""/></a>
+    <div class="menuTopFixed">
+        <div class="width1100 menuTop">
+            <a href="index.html"><img src="img/logo.png" alt=""/></a>
 
 
-      <div class="nav">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
-      <div class="call1"><i class="fa fa-phone" aria-hidden="true"></i></div>
-      <ul>
-        <li><a class="active" href="index.html">Головна</a></li>
-        <li><a href="AboutUs.html">Про нас</a></li>
-        <li><a href="AboutProgram.html">Про програму</a></li>
-        <li><a href="demo.html">Пробна версія</a></li>
-        <li><a href="order.html">Замовити</a></li>
-        <li><a href="News.html">Новини</a></li>
-        <li><a href="contact.html">Контакти</a></li>
-      </ul>
+            <div class="nav">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class="call1"><i class="fa fa-phone" aria-hidden="true"></i></div>
+            <ul>
+                <li><a class="active" href="index.html">Головна</a></li>
+                <li><a href="AboutUs.html">Про нас</a></li>
+                <li><a href="AboutProgram.html">Про програму</a></li>
+                <li><a href="demo.html">Пробна версія</a></li>
+                <li><a href="order.html">Замовити</a></li>
+                <li><a href="News.html">Новини</a></li>
+                <li><a href="contact.html">Контакти</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </div>
 
 <div class="slider">
-  <div class="slide ">
-    <img src="img/slide1.png" alt=""/>
+    <div class="slide ">
+        <img src="img/slide1.png" alt=""/>
 
-    <div class="sliderText">
-      <span>Програмне Забезпечення</span>
+        <div class="sliderText">
+            <span>Програмне Забезпечення</span>
 
-      <p>Лабораторія Промислової Інформатики</p>
-      <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
+            <p>Лабораторія Промислової Інформатики</p>
+            <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
+        </div>
     </div>
-  </div>
-  <div class="slide active-slide">
-    <img src="img/slide1.png" alt=""/>
+    <div class="slide active-slide">
+        <img src="img/slide1.png" alt=""/>
 
-    <div class="sliderText">
-      <span>Програмне Забезпечення</span>
+        <div class="sliderText">
+            <span>Програмне Забезпечення</span>
 
-      <p>Лабораторія Промислової Інформатики</p>
-      <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
+            <p>Лабораторія Промислової Інформатики</p>
+            <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
+        </div>
     </div>
-  </div>
 </div>
 <div class="width1100">
-  <a class="btns" id="arrow1">ПРО НАС</a>
+    <a class="btns" id="arrow1">ПРО НАС</a>
 
-  <div class="maitTextContent">
-    <p>ТОВ «Лабораторія промислової інформатики» надає послуги з розробки спеціалізованого програмного забезпечення
-      різного рівня складності з використанням сучасних технологій
-      збереження та відтворенняінформації для підприємств будіндустрії.</p>
+    <div class="maitTextContent">
+        <p>ТОВ «Лабораторія промислової інформатики» надає послуги з розробки спеціалізованого програмного забезпечення
+            різного рівня складності з використанням сучасних технологій
+            збереження та відтворенняінформації для підприємств будіндустрії.</p>
 
-    <p>ТОВ «Лабораторія промислової інформатики» надає послуги з розробки спеціалізованого програмного забезпечення
-      різного рівня складності з використанням сучасних технологій
-      збереження та відтворенняінформації для підприємств будіндустрії.</p>
-  </div>
-  <div class="clearAll"></div>
+        <p>ТОВ «Лабораторія промислової інформатики» надає послуги з розробки спеціалізованого програмного забезпечення
+            різного рівня складності з використанням сучасних технологій
+            збереження та відтворенняінформації для підприємств будіндустрії.</p>
+    </div>
+    <div class="clearAll"></div>
 </div>
 
 <div class="lapTop">
-  <div class="width1100">
-    <div class="curWidth">
-      <a class="btns1" id="arrow2">ПК "Лабораторія для будівництва"</a>
-      <p>
-        ТОВ «Лабораторія промислової інформатики» провела дослідження ведення лабораторних журналів
-        на підприємствах будіндустрії.
-      </p>
+    <div class="width1100">
+        <div class="curWidth">
+            <a class="btns1" id="arrow2">ПК "Лабораторія для будівництва"</a>
+
+            <p>
+                ТОВ «Лабораторія промислової інформатики» провела дослідження ведення лабораторних журналів
+                на підприємствах будіндустрії.
+            </p>
+        </div>
+
+        <div class="width33 mLeft">
+            <div>
+                <img src="img/money.png" alt=""/>
+                <span>ЕКОНОМІЧНОМУ</span>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.
+                </p>
+            </div>
+            <div>
+                <img src="img/tehnick.png" alt=""/>
+                <span>ТЕХНІЧНОМУ</span>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.
+                </p>
+            </div>
+        </div>
+        <div class="posLapTop">
+            <div>
+                <img src="img/laptop.png" alt=""/>
+            </div>
+
+            <div class="nth2" id="target">
+                <img src="img/social.png" alt=""/>
+                <span>СОЦІАЛЬНОМУ</span>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.
+                </p>
+            </div>
+        </div>
+
+        <div class="width33">
+            <div>
+                <img src="img/gai.png" alt=""/>
+                <span>РЕСУРСНОМУ</span>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.
+                </p>
+            </div>
+            <div>
+                <img src="img/inform.png" alt=""/>
+                <span>ІНФОРМАЦІЙНОМУ</span>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna.
+                </p>
+            </div>
+        </div>
     </div>
-
-    <div class="width33 mLeft">
-      <div>
-        <img src="img/money.png" alt=""/>
-        <span>ЕКОНОМІЧНОМУ</span>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna.
-        </p>
-      </div>
-      <div>
-        <img src="img/tehnick.png" alt=""/>
-        <span>ТЕХНІЧНОМУ</span>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna.
-        </p>
-      </div>
-    </div>
-    <div class="posLapTop">
-      <div>
-        <img src="img/laptop.png" alt=""/>
-      </div>
-
-      <div class="nth2" id="target">
-        <img src="img/social.png" alt=""/>
-        <span>СОЦІАЛЬНОМУ</span>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna.
-        </p>
-      </div>
-    </div>
-
-    <div class="width33">
-      <div>
-        <img src="img/gai.png" alt=""/>
-        <span>РЕСУРСНОМУ</span>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna.
-        </p>
-      </div>
-      <div>
-        <img src="img/inform.png" alt=""/>
-        <span>ІНФОРМАЦІЙНОМУ</span>
-
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-          et dolore magna.
-        </p>
-      </div>
-    </div>
-  </div>
 
 </div>
 
 <div class="width1100">
-  <a class="btns mCenter">НОВИНИ</a>
+    <a class="btns mCenter">НОВИНИ</a>
 
-  <div class="newsCurrent">
-    <img src="img/news1.png" alt=""/>
-    <span>НАЗВАНИЕ НОВОСТИ</span>
+    <div class="newsCurrent">
+        <div><img src="img/news1.png" alt=""/></div>
+        <span>НАЗВАНИЕ НОВОСТИ</span>
 
-    <p>
-      consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    </p>
-    <a href="News.html">ЧИТАТИ ДАЛІ</a>
-  </div>
+        <p>
+            consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+        <a href="NewsCurrent.html">ЧИТАТИ ДАЛІ</a>
+    </div>
 
-  <div class="newsCurrent mL20 mB50">
-    <img src="img/news2.png" alt=""/>
-    <span>НАЗВАНИЕ НОВОСТИ</span>
+    <div class="newsCurrent mL20 mB50">
+        <div><img src="img/news2.png" alt=""/></div>
+        <span>НАЗВАНИЕ НОВОСТИ</span>
 
-    <p>
-      consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    </p>
+        <p>
+            consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
 
-    <a href="News.html">ЧИТАТИ ДАЛІ</a>
-  </div>
+        <a href="NewsCurrent.html">ЧИТАТИ ДАЛІ</a>
+    </div>
 </div>
 <div class="clearAll"></div>
 
 <div class="callback">
-  <span>Зворотній дзвінок</span>
+    <span>Зворотній дзвінок</span>
 
-  <div class="close">
-    <i class="fa fa-times" aria-hidden="true"></i>
-  </div>
+    <div class="close">
+        <i class="fa fa-times" aria-hidden="true"></i>
+    </div>
 
-  <form method="post">
-    <input id="name" type="text" placeholder="Введіть Ваше ім'я*"/>
-    <input id="phone" type="text" placeholder="Введіть Ваш Телефон*"/>
-    <input type="submit" value="ВІДПРАВИТИ" class="btns3"/>
-  </form>
+    <form method="post">
+        <input id="name" type="text" placeholder="Введіть Ваше ім'я*"/>
+        <input id="phone" type="text" placeholder="Введіть Ваш Телефон*"/>
+        <input type="submit" value="ПЕРЕДЗВОНИТИ" class="btns3"/>
+    </form>
 </div>
 <div id="overflow"></div>
 <div class="footer">
-  <div class="bg">
-    <div class="width1100">
-      <a href="#"><img src="img/logo.png" alt="LPI"/>
+    <div class="bg">
+        <div class="width1100">
+            <a href="#"><img src="img/logo.png" alt="LPI"/>
 
-      </a>
+            </a>
 
-      <div class="bottomMenu">
-        <ul>
-          <li><a href="index.html">Головна</a></li>
-          <li><a href="AboutUs.html">Про нас</a></li>
-          <li><a href="AboutProgram.html">Про програму</a></li>
-          <li><a href="demo.html">Пробна версія</a></li>
-          <li><a href="order.html">Замовити</a></li>
-          <li><a href="News.html">Новини</a></li>
-          <li><a href="contact.html">Контакти</a></li>
-        </ul>
-        <div>
-          <i class="fa fa-phone-square" aria-hidden="true"></i>
-          (044) 440-0-44
-          <a class="call">Заказать звонок </a>
+            <div class="bottomMenu">
+                <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="AboutUs.html">Про нас</a></li>
+                    <li><a href="AboutProgram.html">Про програму</a></li>
+                    <li><a href="demo.html">Пробна версія</a></li>
+                    <li><a href="order.html">Замовити</a></li>
+                    <li><a href="News.html">Новини</a></li>
+                    <li><a href="contact.html">Контакти</a></li>
+                </ul>
+                <div>
+                    <i class="fa fa-phone-square" aria-hidden="true"></i>
+                    (044) 440-0-44
+                    <!--<a class="call">Заказать звонок </a>-->
 
-          <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
+                    <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="copy">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
+    <div class="copy">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
