--- a/LPI/News.html
+++ b/LPI/News.html
@@ -1,122 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>LPI</title>
-  <link type="text/css" rel="stylesheet" href="css/style.css"/>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900i" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>LPI</title>
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
+          integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900i" rel="stylesheet">
 
 </head>
 <body>
 <div class="header">
-  <div class="topP">
-    <div class="width1100 ">
-      <i class="fa fa-phone-square" aria-hidden="true"></i>
-      (044) 440-0-44
-      <a class="call">Заказать звонок </a>
-      <i class="fa fa-home" aria-hidden="true"></i>
-      Киев, ул. Название Улици, №25 офис 3
+    <div class="topP">
+        <div class="width1100 ">
+            <i class="fa fa-phone-square" aria-hidden="true"></i>
+            (044) 440-0-44
+            <a class="call">Заказать звонок </a>
+            <i class="fa fa-home" aria-hidden="true"></i>
+            Киев, ул. Название Улици, №25 офис 3
+        </div>
     </div>
-  </div>
-  <div class="menuTopFixed">
-    <div class="width1100 menuTop">
-      <a href="index.html"><img src="img/logo.png" alt=""/></a>
-      <div class="nav">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
-      <div class="call1"><i class="fa fa-phone" aria-hidden="true"></i></div>
-      <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li><a href="AboutUs.html">Про нас</a></li>
-        <li><a href="AboutProgram.html">Про програму</a></li>
-        <li><a href="demo.html">Пробна версія</a></li>
-        <li><a href="order.html">Замовити</a></li>
-        <li><a class="active" href="News.html">Новини</a></li>
-        <li><a href="contact.html">Контакти</a></li>
-      </ul>
+    <div class="menuTopFixed">
+        <div class="width1100 menuTop">
+            <a href="index.html"><img src="img/logo.png" alt=""/></a>
+
+            <div class="nav">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class="call1"><i class="fa fa-phone" aria-hidden="true"></i></div>
+            <ul>
+                <li><a href="index.html">Головна</a></li>
+                <li><a href="AboutUs.html">Про нас</a></li>
+                <li><a href="AboutProgram.html">Про програму</a></li>
+                <li><a href="demo.html">Пробна версія</a></li>
+                <li><a href="order.html">Замовити</a></li>
+                <li><a class="active" href="News.html">Новини</a></li>
+                <li><a href="contact.html">Контакти</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </div>
 <div class="width1100 breadCrumbs">
-  <div>
-    <h1>
-      НАЗВА НОВИНИ
-    </h1>
-
     <div>
-      <span>Підзаголовок</span>
+        <h1>
+            НАЗВА НОВИНИ
+        </h1>
 
-      <div class="breadCrumbsDate">
-        19 БЕРЕЗНЯ, 2016
-      </div>
+        <div>
+            <span>Підзаголовок</span>
+
+            <div class="breadCrumbsDate">
+                19 БЕРЕЗНЯ, 2016
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 <div class="width1100 newsBg">
-  <div class="NewsContent">
-    <img src="img/mainNews.jpg" alt="LPI">
-    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
+    <div class="NewsContent">
+        <img src="img/mainNews.jpg" alt="LPI">
+        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur debitis earum, est exercitationem
-      quidem suscipit voluptatibus. Aliquid amet delectus expedita fuga ipsam, nihil nulla, quam quisquam reiciendis
-      suscipit veniam.
-      <br><br>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat recusandae
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat recusandae
-      totam! Beatae cumque delectus excepturi harum incidunt inventore nostrum, repellendus sit sunt veritatis.
-      <br><br>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat recusandae
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam beatae culpa deleniti,
-      ducimus eum, eveniet id ipsam libero minus necessitatibus numquam possimus quam quos saepe tenetur. Deleniti,
-      error.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur debitis earum, est
+            exercitationem
+            quidem suscipit voluptatibus. Aliquid amet delectus expedita fuga ipsam, nihil nulla, quam quisquam
+            reiciendis
+            suscipit veniam.
+            <br><br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+            recusandae
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+            recusandae
+            totam! Beatae cumque delectus excepturi harum incidunt inventore nostrum, repellendus sit sunt veritatis.
+            <br><br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+            recusandae
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam beatae culpa deleniti,
+            ducimus eum, eveniet id ipsam libero minus necessitatibus numquam possimus quam quos saepe tenetur.
+            Deleniti,
+            error.</p>
 
-  </div>
+    </div>
+</div>
+<div class="width1100 breadCrumbs">
+    <div>
+        <h1>
+            НАЗВА НОВИНИ
+        </h1>
+
+        <div>
+            <span>Підзаголовок</span>
+
+            <div class="breadCrumbsDate">
+                19 БЕРЕЗНЯ, 2016
+            </div>
+        </div>
+    </div>
+</div>
+<div class="width1100 newsBg">
+    <div class="NewsContent">
+        <img src="img/mainNews.jpg" alt="LPI">
+        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur debitis earum, est
+            exercitationem
+            quidem suscipit voluptatibus. Aliquid amet delectus expedita fuga ipsam, nihil nulla, quam quisquam
+            reiciendis
+            suscipit veniam.
+            <br><br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+            recusandae
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+            recusandae
+            totam! Beatae cumque delectus excepturi harum incidunt inventore nostrum, repellendus sit sunt veritatis.
+            <br><br>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+            recusandae
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam beatae culpa deleniti,
+            ducimus eum, eveniet id ipsam libero minus necessitatibus numquam possimus quam quos saepe tenetur.
+            Deleniti,
+            error.</p>
+
+    </div>
 </div>
 <div class="callback">
-  <span>Зворотній дзвінок</span>
+    <span>Зворотній дзвінок</span>
 
-  <div class="close">
-    <i class="fa fa-times" aria-hidden="true"></i>
-  </div>
+    <div class="close">
+        <i class="fa fa-times" aria-hidden="true"></i>
+    </div>
 
-  <form method="post">
-    <input id="name" type="text" placeholder="Введіть Ваше ім'я*"/>
-    <input id="phone" type="text" placeholder="Введіть Ваш Телефон*"/>
-    <input type="submit" value="ВІДПРАВИТИ" class="btns3"/>
-  </form>
+    <form method="post">
+        <input id="name" type="text" placeholder="Введіть Ваше ім'я*"/>
+        <input id="phone" type="text" placeholder="Введіть Ваш Телефон*"/>
+        <input type="submit" value="ПЕРЕДЗВОНИТИ" class="btns3"/>
+    </form>
 </div>
 <div id="overflow"></div>
 <div class="footer">
-  <div class="bg">
-    <div class="width1100">
-      <a href="#"><img src="img/logo.png" alt=""/>
+    <div class="bg">
+        <div class="width1100">
+            <a href="#"><img src="img/logo.png" alt=""/>
 
-      </a>
+            </a>
 
-      <div class="bottomMenu">
-        <ul>
-          <li><a href="index.html">Головна</a></li>
-          <li><a href="AboutUs.html">Про нас</a></li>
-          <li><a href="AboutProgram.html">Про програму</a></li>
-          <li><a href="demo.html">Пробна версія</a></li>
-          <li><a href="order.html">Замовити</a></li>
-          <li><a href="News.html">Новини</a></li>
-          <li><a href="contact.html">Контакти</a></li>
-        </ul>
-        <div>
-          <i class="fa fa-phone-square" aria-hidden="true"></i>
-          (044) 440-0-44
-          <a class="call">Заказать звонок </a>
+            <div class="bottomMenu">
+                <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="AboutUs.html">Про нас</a></li>
+                    <li><a href="AboutProgram.html">Про програму</a></li>
+                    <li><a href="demo.html">Пробна версія</a></li>
+                    <li><a href="order.html">Замовити</a></li>
+                    <li><a href="News.html">Новини</a></li>
+                    <li><a href="contact.html">Контакти</a></li>
+                </ul>
+                <div>
+                    <i class="fa fa-phone-square" aria-hidden="true"></i>
+                    (044) 440-0-44
+                    <!--<a class="call">Заказать звонок </a>-->
 
-          <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
+                    <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="copy">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
+    <div class="copy">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
