--- a/LPI/contact.html
+++ b/LPI/contact.html
@@ -64,7 +64,7 @@
         <textarea name="message" id="message" placeholder="Введіть ваше повідомлення"></textarea>
       </div>
       <div class="clearAll"></div>
-      <input type="submit" value="ВІДПРАВИТИ" class="btns3">
+      <input type="submit" value="ПЕРЕДЗВОНИТИ" class="btns3">
     </form>
   </div>
 </div>
@@ -133,7 +133,7 @@
         <div class="m0">
           <i class="fa fa-phone-square" aria-hidden="true"></i>
           (044) 440-0-44
-          <a class="call">Заказать звонок </a>
+          <!--<a class="call">Заказать звонок </a>-->
 
           <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
         </div>
