--- a/LPI/demo.html
+++ b/LPI/demo.html
@@ -1,138 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>LPI</title>
-  <link type="text/css" rel="stylesheet" href="css/style.css"/>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900i" rel="stylesheet">
+    <meta charset="UTF-8">
+    <title>LPI</title>
+    <link type="text/css" rel="stylesheet" href="css/style.css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
+          integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900i" rel="stylesheet">
 
 </head>
 <body>
 <div class="header">
-  <div class="topP">
-    <div class="width1100 ">
-      <i class="fa fa-phone-square" aria-hidden="true"></i>
-      (044) 440-0-44
-      <a class="call">Заказать звонок </a>
-      <i class="fa fa-home" aria-hidden="true"></i>
-      Киев, ул. Название Улици, №25 офис 3
+    <div class="topP">
+        <div class="width1100 ">
+            <i class="fa fa-phone-square" aria-hidden="true"></i>
+            (044) 440-0-44
+            <a class="call">Заказать звонок </a>
+            <i class="fa fa-home" aria-hidden="true"></i>
+            Киев, ул. Название Улици, №25 офис 3
+        </div>
     </div>
-  </div>
-  <div class="menuTopFixed">
-    <div class="width1100 menuTop">
-      <a href="index.html"><img src="img/logo.png" alt=""/></a>
-      <div class="nav">
-        <i class="fa fa-bars" aria-hidden="true"></i>
-      </div>
-      <div class="call1"><i class="fa fa-phone" aria-hidden="true"></i></div>
-      <ul>
-        <li><a href="index.html">Головна</a></li>
-        <li><a href="AboutUs.html">Про нас</a></li>
-        <li><a href="AboutProgram.html">Про програму</a></li>
-        <li><a class="active" href="demo.html">Пробна версія</a></li>
-        <li><a  href="order.html">Замовити</a></li>
-        <li><a href="News.html">Новини</a></li>
-        <li><a href="contact.html">Контакти</a></li>
-      </ul>
+    <div class="menuTopFixed">
+        <div class="width1100 menuTop">
+            <a href="index.html"><img src="img/logo.png" alt=""/></a>
+
+            <div class="nav">
+                <i class="fa fa-bars" aria-hidden="true"></i>
+            </div>
+            <div class="call1"><i class="fa fa-phone" aria-hidden="true"></i></div>
+            <ul>
+                <li><a href="index.html">Головна</a></li>
+                <li><a href="AboutUs.html">Про нас</a></li>
+                <li><a href="AboutProgram.html">Про програму</a></li>
+                <li><a class="active" href="demo.html">Пробна версія</a></li>
+                <li><a href="order.html">Замовити</a></li>
+                <li><a href="News.html">Новини</a></li>
+                <li><a href="contact.html">Контакти</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </div>
 <div class="demo">
-  <div class="width1100 demoContent">
-    <div>
-      <h1>Пробна версія</h1>
-      <span>ПК ЛАБОРАТОРІЯ ДЛЯ БУДІВНИЦТВА</span>
+    <div class="width1100 demoContent">
+        <div>
+            <h1>Пробна версія</h1>
+            <span>ПК ЛАБОРАТОРІЯ ДЛЯ БУДІВНИЦТВА</span>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
-        rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
-        eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
-        consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
-        quaerat voluptatem.</p>
-      <a class="download">Завантажити Пробна версію</a>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+                id est
+                laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+                laudantium, totam
+                rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                explicabo.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni
+                dolores
+                eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+                amet,
+                consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+                aliquam
+                quaerat voluptatem.</p>
+            <a class="download">Завантажити пробну версію</a>
+        </div>
+        <img src="img/laptop.png" alt="LPI">
     </div>
-    <img src="img/laptop.png" alt="LPI">
-  </div>
 </div>
 <div class="callback">
-  <span>Зворотній дзвінок</span>
+    <span>Зворотній дзвінок</span>
 
-  <div class="close">
-    <i class="fa fa-times" aria-hidden="true"></i>
-  </div>
+    <div class="close">
+        <i class="fa fa-times" aria-hidden="true"></i>
+    </div>
 
-  <form method="post">
-    <input id="name" type="text" placeholder="Введіть Ваше ім'я*"/>
-    <input id="phone" type="text" placeholder="Введіть Ваш Телефон*"/>
-    <input type="submit" value="ВІДПРАВИТИ" class="btns3"/>
-  </form>
+    <form method="post">
+        <input id="name" type="text" placeholder="Введіть Ваше ім'я*"/>
+        <input id="phone" type="text" placeholder="Введіть Ваш Телефон*"/>
+        <input type="submit" value="ПЕРЕДЗВОНИТИ" class="btns3"/>
+    </form>
 </div>
 <div id="overflow"></div>
 <div id="agreement">
-  <h4>ЛІЦЕНЗІЙНА ЗГОДА</h4>
+    <h4>ЛІЦЕНЗІЙНА ЗГОДА</h4>
 
-  <div>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    <br> <br>
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut
-    perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
-    ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-    voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-    voluptatem sequi nesciunt.
-    <br> <br>
-    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam
-    eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-    <br> <br>
-    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut
-    perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque
-    ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-    voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
-    voluptatem sequi nesciunt.
-  </div>
-  <form method="post">
-    <div class="agreementCheckbox" for="check"><input type="checkbox" id="check"><span class="checkbox">
-      <i class="fa fa-check" aria-hidden="true"></i></span>згоден</div>
-    <input type="submit" id="download"  value="ЗАВАНТАЖИТИ">
-  </form>
+    <div>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat.
+        <br> <br>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut
+        perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+        eaque
+        ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+        voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+        voluptatem sequi nesciunt.
+        <br> <br>
+        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non
+        numquam
+        eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+        <br> <br>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut
+        perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam,
+        eaque
+        ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
+        voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+        voluptatem sequi nesciunt.
+    </div>
+    <form>
+        <div class="agreementCheckbox" for="check"><input type="checkbox" id="check"><span class="checkbox">
+      <i class="fa fa-check" aria-hidden="true"></i></span>згоден
+        </div>
+        <input type="submit" id="download" value="ЗАВАНТАЖИТИ">
+    </form>
 </div>
 <div class="footer">
-  <div class="bg">
-    <div class="width1100">
-      <a href="#"><img src="img/logo.png" alt=""/>
+    <div class="bg">
+        <div class="width1100">
+            <a href="#"><img src="img/logo.png" alt=""/>
 
-      </a>
+            </a>
 
-      <div class="bottomMenu">
-        <ul>
-          <li><a href="index.html">Головна</a></li>
-          <li><a href="AboutUs.html">Про нас</a></li>
-          <li><a href="AboutProgram.html">Про програму</a></li>
-          <li><a href="demo.html">Пробна версія</a></li>
-          <li><a href="order.html">Замовити</a></li>
-          <li><a href="News.html">Новини</a></li>
-          <li><a href="contact.html">Контакти</a></li>
-        </ul>
-        <div>
-          <i class="fa fa-phone-square" aria-hidden="true"></i>
-          (044) 440-0-44
-          <a class="call">Заказать звонок </a>
+            <div class="bottomMenu">
+                <ul>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="AboutUs.html">Про нас</a></li>
+                    <li><a href="AboutProgram.html">Про програму</a></li>
+                    <li><a href="demo.html">Пробна версія</a></li>
+                    <li><a href="order.html">Замовити</a></li>
+                    <li><a href="News.html">Новини</a></li>
+                    <li><a href="contact.html">Контакти</a></li>
+                </ul>
+                <div>
+                    <i class="fa fa-phone-square" aria-hidden="true"></i>
+                    (044) 440-0-44
+                    <a class="call">Заказать звонок </a>
 
-          <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
+                    <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="copy">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
+    <div class="copy">Создание и разработка сайта &copy; Intellectus-studio 2016</div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script type="text/javascript" src="js/js.js"></script>
