--- a/LPI/AboutProgram.html
+++ b/LPI/AboutProgram.html
@@ -16,7 +16,7 @@
     <div class="width1100 ">
       <i class="fa fa-phone-square" aria-hidden="true"></i>
       (044) 440-0-44
-      <a class="call">Замовити звонок </a>
+      <a class="call">Замовити дзвінок </a>
       <i class="fa fa-home" aria-hidden="true"></i>
       Киев, ул. Название Улици, №25 офис 3
     </div>
