--- a/LPI/demo.html
+++ b/LPI/demo.html
@@ -16,7 +16,7 @@
         <div class="width1100 ">
             <i class="fa fa-phone-square" aria-hidden="true"></i>
             (044) 440-0-44
-            <a class="call">Замовити звонок </a>
+            <a class="call">Замовити звінок </a>
             <i class="fa fa-home" aria-hidden="true"></i>
             Киев, ул. Название Улици, №25 офис 3
         </div>
@@ -140,7 +140,7 @@
                 <div>
                     <i class="fa fa-phone-square" aria-hidden="true"></i>
                     (044) 440-0-44
-                    <a class="call">Заказать звонок </a>
+                    <!--<a class="call">Заказать звонок </a>-->
 
                     <i class="fa fa-home" aria-hidden="true"></i>Киев, ул. Название Улици, №25 офис 3
                 </div>
