--- a/LPI/News.html
+++ b/LPI/News.html
@@ -57,29 +57,33 @@
     </div>
 </div>
 <div class="width1100 newsBg">
-    <div class="NewsContent">
+    <div class="NewsContent ph72">
         <img src="img/mainNews.jpg" alt="LPI">
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur debitis earum, est
-            exercitationem
-            quidem suscipit voluptatibus. Aliquid amet delectus expedita fuga ipsam, nihil nulla, quam quisquam
-            reiciendis
-            suscipit veniam.
-            <br><br>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
-            recusandae
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
-            recusandae
-            totam! Beatae cumque delectus excepturi harum incidunt inventore nostrum, repellendus sit sunt veritatis.
-            <br><br>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
-            recusandae
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam beatae culpa deleniti,
-            ducimus eum, eveniet id ipsam libero minus necessitatibus numquam possimus quam quos saepe tenetur.
-            Deleniti,
-            error.</p>
-
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur debitis earum, est
+                exercitationem
+                quidem suscipit voluptatibus. Aliquid amet delectus expedita fuga ipsam, nihil nulla, quam quisquam
+                reiciendis
+                suscipit veniam.
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+                recusandae
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+                recusandae
+                totam! Beatae cumque delectus excepturi harum incidunt inventore nostrum, repellendus sit sunt
+                veritatis.
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+                recusandae
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam beatae culpa
+                deleniti,
+                ducimus eum, eveniet id ipsam libero minus necessitatibus numquam possimus quam quos saepe tenetur.
+                Deleniti,
+                error.</p>
+        </div>
+        <a class="toggle-button">ЧИТАТИ ДАЛІ</a>
     </div>
 </div>
 <div class="width1100 breadCrumbs">
@@ -98,29 +102,33 @@
     </div>
 </div>
 <div class="width1100 newsBg">
-    <div class="NewsContent">
+    <div class="NewsContent ph72">
         <img src="img/mainNews.jpg" alt="LPI">
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </span>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur debitis earum, est
-            exercitationem
-            quidem suscipit voluptatibus. Aliquid amet delectus expedita fuga ipsam, nihil nulla, quam quisquam
-            reiciendis
-            suscipit veniam.
-            <br><br>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
-            recusandae
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
-            recusandae
-            totam! Beatae cumque delectus excepturi harum incidunt inventore nostrum, repellendus sit sunt veritatis.
-            <br><br>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
-            recusandae
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam beatae culpa deleniti,
-            ducimus eum, eveniet id ipsam libero minus necessitatibus numquam possimus quam quos saepe tenetur.
-            Deleniti,
-            error.</p>
-
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur debitis earum, est
+                exercitationem
+                quidem suscipit voluptatibus. Aliquid amet delectus expedita fuga ipsam, nihil nulla, quam quisquam
+                reiciendis
+                suscipit veniam.
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+                recusandae
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+                recusandae
+                totam! Beatae cumque delectus excepturi harum incidunt inventore nostrum, repellendus sit sunt
+                veritatis.
+                <br><br>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ad aut in iusto non perferendis quaerat
+                recusandae
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci, aperiam beatae culpa
+                deleniti,
+                ducimus eum, eveniet id ipsam libero minus necessitatibus numquam possimus quam quos saepe tenetur.
+                Deleniti,
+                error.</p>
+        </div>
+        <a class="toggle-button">ЧИТАТИ ДАЛІ</a>
     </div>
 </div>
 <div class="callback">
