--- a/LPI/demo.html
+++ b/LPI/demo.html
@@ -44,8 +44,8 @@
 <div class="demo">
     <div class="width1100 demoContent">
         <div>
-            <h1>Пробна версія</h1>
-            <span>ПК ЛАБОРАТОРІЯ ДЛЯ БУДІВНИЦТВА</span>
+            <h1>ПК "ЛАБОРАТОРІЯ ДЛЯ БУДІВНИЦТВА"</h1>
+            <span>Пробна версія</span>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore
