--- a/LPI/index.html
+++ b/LPI/index.html
@@ -56,9 +56,9 @@
         <img src="img/slide1.png" alt=""/>
 
         <div class="sliderText">
-            <span>Програмне Забезпечення</span>
+            <span>Програмний Комплекс</span>
 
-            <p>Лабораторія Промислової Інформатики</p>
+            <p>"Лабораторія для будівництва"</p>
             <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
         </div>
     </div>
@@ -66,9 +66,9 @@
         <img src="img/slide1.png" alt=""/>
 
         <div class="sliderText">
-            <span>Програмне Забезпечення</span>
+            <span>Програмний Комплекс</span>
 
-            <p>Лабораторія Промислової Інформатики</p>
+            <p>"Лабораторія для будівництва"</p>
             <a class="btns2" href="demo.html">СПРОБУВАТИ ПРОБНУ ВЕРСІЮ</a>
         </div>
     </div>
