--- a/LPI/order.html
+++ b/LPI/order.html
@@ -135,7 +135,7 @@
                     <div>
                         <input type="radio" name="questNext1">
                         <span><i class="fa fa-check" aria-hidden="true"></i></span>
-                        лабораторыя пыдприємства
+                        лабораторія підприємства
                     </div>
                     <div>
                         <input type="radio" name="questNext1">
@@ -169,12 +169,12 @@
                     <div>
                         <input type="radio" name="questNext3">
                         <span><i class="fa fa-check" aria-hidden="true"></i></span>
-                        локальну
+                        так
                     </div>
                     <div>
                         <input type="radio" name="questNext3">
                         <span><i class="fa fa-check" aria-hidden="true"></i></span>
-                        мережеву
+                        ні
                     </div>
 
                 </div>
